<?xml version="1.0" ?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.jpmml</groupId>
		<artifactId>jpmml-parent</artifactId>
		<version>1.0.8</version>
	</parent>

	<groupId>org.jpmml</groupId>
	<artifactId>jpmml-sparkml</artifactId>
	<version>3.2.0</version>
	<packaging>pom</packaging>

	<name>JPMML-SparkML</name>
	<description>Java library and command-line application for converting Apache Spark ML pipelines to PMML</description>
	<url>https://github.com/jpmml/jpmml-sparkml</url>

	<licenses>
		<license>
			<name>GNU Affero General Public License (AGPL) version 3.0</name>
			<url>http://www.gnu.org/licenses/agpl-3.0.html</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<developers>
		<developer>
			<id>villu.ruusmann</id>
			<name>Villu Ruusmann</name>
		</developer>
	</developers>

	<modules>
		<module>pmml-sparkml</module>
		<module>pmml-sparkml-evaluator</module>
		<module>pmml-sparkml-example</module>
		<module>pmml-sparkml-lightgbm</module>
		<module>pmml-sparkml-xgboost</module>
	</modules>

	<scm>
		<connection>scm:git:git@github.com:jpmml/jpmml-sparkml.git</connection>
		<developerConnection>scm:git:git@github.com:jpmml/jpmml-sparkml.git</developerConnection>
		<url>git://github.com/jpmml/jpmml-sparkml.git</url>
		<tag>3.2.0</tag>
	</scm>
	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/jpmml/jpmml-sparkml/issues</url>
	</issueManagement>

	<properties>
		<java.version>17</java.version>
		<scala.version>2.13.16</scala.version>
		<jpmml-converter.version>1.6.3</jpmml-converter.version>
		<jpmml-evaluator.version>1.7.4</jpmml-evaluator.version>
		<jpmml-lightgbm.version>1.6.1</jpmml-lightgbm.version>
		<jpmml-xgboost.version>1.9.2</jpmml-xgboost.version>
		<spark.version>4.0.0</spark.version>
		<synapseml-lightgbm.version>[0.9.5, 1.0.13]</synapseml-lightgbm.version>
		<xgboost4j-spark.version>[2.1.0, 3.0.2]</xgboost4j-spark.version>
		<project.build.outputTimestamp>2025-08-08T10:40:46Z</project.build.outputTimestamp>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.jpmml</groupId>
				<artifactId>pmml-sparkml</artifactId>
				<version>3.2.0</version>
			</dependency>
			<dependency>
				<groupId>org.jpmml</groupId>
				<artifactId>pmml-sparkml-evaluator</artifactId>
				<version>3.2.0</version>
			</dependency>
			<dependency>
				<groupId>org.jpmml</groupId>
				<artifactId>pmml-sparkml-example</artifactId>
				<version>3.2.0</version>
			</dependency>
			<dependency>
				<groupId>org.jpmml</groupId>
				<artifactId>pmml-sparkml-lightgbm</artifactId>
				<version>3.2.0</version>
			</dependency>
			<dependency>
				<groupId>org.jpmml</groupId>
				<artifactId>pmml-sparkml-xgboost</artifactId>
				<version>3.2.0</version>
			</dependency>

			<dependency>
				<groupId>org.jpmml</groupId>
				<artifactId>pmml-converter</artifactId>
				<version>${jpmml-converter.version}</version>
				<exclusions>
					<exclusion>
						<groupId>org.slf4j</groupId>
						<artifactId>*</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.jpmml</groupId>
				<artifactId>pmml-converter-testing</artifactId>
				<version>${jpmml-converter.version}</version>
			</dependency>

			<dependency>
				<groupId>org.jpmml</groupId>
				<artifactId>pmml-evaluator</artifactId>
				<version>${jpmml-evaluator.version}</version>
			</dependency>
			<dependency>
				<groupId>org.jpmml</groupId>
				<artifactId>pmml-evaluator-testing</artifactId>
				<version>${jpmml-evaluator.version}</version>
			</dependency>

			<dependency>
				<groupId>org.jpmml</groupId>
				<artifactId>pmml-lightgbm</artifactId>
				<version>${jpmml-lightgbm.version}</version>
			</dependency>

			<dependency>
				<groupId>org.jpmml</groupId>
				<artifactId>pmml-xgboost</artifactId>
				<version>${jpmml-xgboost.version}</version>
			</dependency>

			<dependency>
				<groupId>org.jpmml</groupId>
				<artifactId>telemetry-client</artifactId>
				<version>1.0.0</version>
			</dependency>

			<dependency>
				<groupId>com.microsoft.azure</groupId>
				<artifactId>synapseml-lightgbm_2.12</artifactId>
				<version>${synapseml-lightgbm.version}</version>
			</dependency>

			<dependency>
				<groupId>com.beust</groupId>
				<artifactId>jcommander</artifactId>
				<version>1.82</version>
			</dependency>

			<dependency>
				<groupId>ml.dmlc</groupId>
				<artifactId>xgboost4j-spark_2.13</artifactId>
				<version>${xgboost4j-spark.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.spark</groupId>
				<artifactId>spark-core_2.13</artifactId>
				<version>${spark.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.spark</groupId>
				<artifactId>spark-mllib_2.13</artifactId>
				<version>${spark.version}</version>
				<exclusions>
					<exclusion>
						<groupId>org.glassfish.jaxb</groupId>
						<artifactId>jaxb-runtime</artifactId>
					</exclusion>
				</exclusions>
			</dependency>

			<dependency>
				<groupId>org.apache.hadoop</groupId>
				<artifactId>hadoop-client</artifactId>
				<version>2.7.4</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>net.alchim31.maven</groupId>
				<artifactId>scala-maven-plugin</artifactId>
				<version>4.9.5</version>
				<configuration>
					<charset>${project.build.sourceEncoding}</charset>
					<compileOrder>ScalaThenJava</compileOrder>
					<jvmArgs>
						<jvmArg>-Xmx1024m</jvmArg>
					</jvmArgs>
					<release>${java.version}</release>
					<scalaVersion>${scala.version}</scalaVersion>
				</configuration>
				<executions>
					<execution>
						<id>scala-compile-first</id>
						<phase>process-resources</phase>
						<goals>
							<goal>add-source</goal>
							<goal>compile</goal>
						</goals>
					</execution>
					<execution>
						<id>scala-test-compile</id>
						<phase>process-test-resources</phase>
						<goals>
							<goal>testCompile</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>de.jutzig</groupId>
				<artifactId>github-release-plugin</artifactId>
				<version>1.2.0</version>
				<executions>
					<execution>
						<id>default-cli</id>
						<configuration>
							<artifact>${project.build.directory}/${project.artifactId}-executable-${project.version}.${project.packaging}</artifact>
							<description>https://github.com/jpmml/jpmml-sparkml</description>
							<releaseName>${project.version}</releaseName>
							<repositoryId>jpmml/jpmml-sparkml</repositoryId>
							<tag>${project.version}</tag>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<activation>
				<jdk>[16, )</jdk>
			</activation>
			
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<configuration>
							<argLine>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED</argLine>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
